--- a/pom.xml
+++ b/pom.xml
@@ -1,34 +1,95 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>bonita-connectors</artifactId>
-		<groupId>org.bonitasoft.connectors</groupId>
-		<version>1.0.0</version>
-	</parent>
 
+	<groupId>org.bonitasoft.connectors</groupId>
 	<artifactId>bonita-connector-salesforce</artifactId>
 	<version>1.1.3-SNAPSHOT</version>
 
 	<name>Bonita Salesforce Connector</name>
+	<description>Salesforce Connectors for Bonita</description>
+	<url>https://www.bonitasoft.com</url>
+
+	<developers>
+		<developer>
+			<id>bonitasoft</id>
+			<name>Bonitasoft</name>
+			<email>rd.user@bonitasoft.com</email>
+			<organization>Bonitasoft</organization>
+			<organizationUrl>https://www.bonitasoft.com</organizationUrl>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>GPL-v2.0</name>
+			<url>http://www.gnu.org/licenses/gpl-2.0.txt</url>
+		</license>
+	</licenses>
 
 	<properties>
-		<bonita.engine.version>7.8.0</bonita.engine.version>
+		<!-- Maven -->
+		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.build.timestamp.format>yyyy.MM.dd-hh.mm</maven.build.timestamp.format>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.bonitasoft.engine</groupId>
-				<artifactId>bonita-engine</artifactId>
-				<version>${bonita.engine.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+		<!-- Connector -->
+		<salesforce-createsobject.def.id>salesforce-createsobject</salesforce-createsobject.def.id>
+		<salesforce-createsobject.def.version>1.0.1</salesforce-createsobject.def.version>
+		<salesforce-createsobject.impl.id>${salesforce-createsobject.def.id}-impl</salesforce-createsobject.impl.id>
+		<salesforce-createsobject.impl.version>${project.version}</salesforce-createsobject.impl.version>
+		<salesforce-createsobject.main-class>org.bonitasoft.connectors.salesforce.partner.CreateSObjectConnector</salesforce-createsobject.main-class>
+
+		<salesforce-deletesobjects.def.id>salesforce-deletesobjects</salesforce-deletesobjects.def.id>
+		<salesforce-deletesobjects.def.version>1.0.1</salesforce-deletesobjects.def.version>
+		<salesforce-deletesobjects.impl.id>${salesforce-deletesobjects.def.id}-impl</salesforce-deletesobjects.impl.id>
+		<salesforce-deletesobjects.impl.version>${project.version}</salesforce-deletesobjects.impl.version>
+		<salesforce-deletesobjects.main-class>org.bonitasoft.connectors.salesforce.partner.DeleteSObjectsConnector</salesforce-deletesobjects.main-class>
+		
+		<salesforce-querysobjects.def.id>salesforce-querysobjects</salesforce-querysobjects.def.id>
+		<salesforce-querysobjects.def.version>1.0.1</salesforce-querysobjects.def.version>
+		<salesforce-querysobjects.impl.id>${salesforce-querysobjects.def.id}-impl</salesforce-querysobjects.impl.id>
+		<salesforce-querysobjects.impl.version>${project.version}</salesforce-querysobjects.impl.version>
+		<salesforce-querysobjects.main-class>org.bonitasoft.connectors.salesforce.partner.QuerySObjectsConnector</salesforce-querysobjects.main-class>
+		
+		<salesforce-retrievesobjects.def.id>salesforce-retrievesobjects</salesforce-retrievesobjects.def.id>
+		<salesforce-retrievesobjects.def.version>1.0.1</salesforce-retrievesobjects.def.version>
+		<salesforce-retrievesobjects.impl.id>${salesforce-retrievesobjects.def.id}-impl</salesforce-retrievesobjects.impl.id>
+		<salesforce-retrievesobjects.impl.version>${project.version}</salesforce-retrievesobjects.impl.version>
+		<salesforce-retrievesobjects.main-class>org.bonitasoft.connectors.salesforce.partner.RetrieveSObjectsConnector</salesforce-retrievesobjects.main-class>
+		
+		<salesforce-updatesobject.def.id>salesforce-updatesobject</salesforce-updatesobject.def.id>
+		<salesforce-updatesobject.def.version>1.0.1</salesforce-updatesobject.def.version>
+		<salesforce-updatesobject.impl.id>${salesforce-updatesobject.def.id}-impl</salesforce-updatesobject.impl.id>
+		<salesforce-updatesobject.impl.version>${project.version}</salesforce-updatesobject.impl.version>
+		<salesforce-updatesobject.main-class>org.bonitasoft.connectors.salesforce.partner.UpdateSObjectConnector</salesforce-updatesobject.main-class>
+		
+		
+		<!-- Bonita -->
+		<bonita.engine.version>7.10.0</bonita.engine.version>
+		<force-partner-api.version>24.0.0</force-partner-api.version>
+
+		<!-- Tests -->
+		<sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
+
+		<!-- Maven plugins -->
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
+		<groovy-maven-plugin.version>2.1.1</groovy-maven-plugin.version>
+		<groovy-all.version>2.4.20</groovy-all.version>
+		<maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+		<nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
+		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
+		<maven-source-plugin.version>3.2.0</maven-source-plugin.version>
+		<license-maven-plugin.version>4.0.rc2</license-maven-plugin.version>
+
+		<!-- Sonar -->
+		<sonar.projectKey>bonitasoft_bonita-connector-salesforce</sonar.projectKey>
+		<sonar.organization>bonitasoft</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -40,122 +101,205 @@
 		<dependency>
 			<groupId>com.force.api</groupId>
 			<artifactId>force-wsc</artifactId>
-			<version>24.0.0</version>
+			<version>${force-partner-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.force.api</groupId>
 			<artifactId>force-partner-api</artifactId>
-			<version>24.0.0</version>
+			<version>${force-partner-api.version}</version>
 		</dependency>
 	</dependencies>
 
 
-	<build>
+		<build>
+		<defaultGoal>verify</defaultGoal>
+		<resources>
+			<resource>
+				<directory>src/main/resources-filtered</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-release-plugin</artifactId>
-					<version>2.5.3</version>
+					<groupId>com.mycila</groupId>
+					<artifactId>license-maven-plugin</artifactId>
+					<version>${license-maven-plugin.version}</version>
 					<configuration>
-						<tagNameFormat>@{project.version}</tagNameFormat>
+						<licenseSets>
+							<licenseSet>
+								<header>${project.basedir}/src/license/header.txt</header>
+								<includes>
+									<include>**/*.java</include>
+								</includes>
+							</licenseSet>
+						</licenseSets>
 					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.5</version>
+					<version>${maven-assembly-plugin.version}</version>
+					<configuration>
+						<descriptorSourceDirectory>${project.basedir}/src/assembly</descriptorSourceDirectory>
+					</configuration>
 					<executions>
 						<execution>
-							<id>assemble</id>
-							<phase>none</phase>
+							<id>package-connectors</id>
+							<phase>package</phase>
+							<goals>
+								<goal>single</goal>
+							</goals>
+							<configuration>
+								<appendAssemblyId>true</appendAssemblyId>
+							</configuration>
 						</execution>
 					</executions>
 				</plugin>
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
+					<groupId>org.codehaus.gmaven</groupId>
+					<artifactId>groovy-maven-plugin</artifactId>
+					<version>${groovy-maven-plugin.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>org.codehaus.groovy</groupId>
+							<artifactId>groovy-all</artifactId>
+							<version>${groovy-all.version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+				<plugin>
+					<groupId>org.sonarsource.scanner.maven</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>${sonar-maven-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.sonatype.plugins</groupId>
+					<artifactId>nexus-staging-maven-plugin</artifactId>
+					<version>${nexus-staging-maven-plugin.version}</version>
+					<extensions>true</extensions>
+					<configuration>
+						<serverId>ossrh</serverId>
+						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+						<autoReleaseAfterClose>false</autoReleaseAfterClose>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
+				<groupId>com.mycila</groupId>
+				<artifactId>license-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>all</id>
-						<phase>package</phase>
+						<id>license-check-file-header</id>
 						<goals>
-							<goal>single</goal>
+							<goal>check</goal>
+						</goals>
+						<phase>validate</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.gmaven</groupId>
+				<artifactId>groovy-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>execute</goal>
 						</goals>
 						<configuration>
-							<descriptor>${basedir}/connector-assembly.xml</descriptor>
-							<appendAssemblyId>true</appendAssemblyId>
+							<source>${project.basedir}/src/script/dependencies-as-var.groovy</source>
 						</configuration>
 					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>${maven-source-plugin.version}</version>
+				<executions>
 					<execution>
-						<id>create-object</id>
-						<phase>package</phase>
+						<id>attach-sources</id>
 						<goals>
-							<goal>single</goal>
+							<goal>jar-no-fork</goal>
 						</goals>
-						<configuration>
-							<descriptor>${basedir}/create-object-assembly.xml</descriptor>
-						</configuration>
 					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven-javadoc-plugin.version}</version>
+				<executions>
 					<execution>
-						<id>delete-objects</id>
-						<phase>package</phase>
+						<id>attach-javadocs</id>
 						<goals>
-							<goal>single</goal>
+							<goal>jar</goal>
 						</goals>
-						<configuration>
-							<descriptor>${basedir}/delete-objects-assembly.xml</descriptor>
-						</configuration>
-					</execution>
-					<execution>
-						<id>query-objects-job</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>${basedir}/query-objects-assembly.xml</descriptor>
-						</configuration>
-					</execution>
-					<execution>
-						<id>retrieve-objects-job</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>${basedir}/retrieve-objects-assembly.xml</descriptor>
-						</configuration>
-					</execution>
-					<execution>
-						<id>update-object-job</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>${basedir}/update-object-assembly.xml</descriptor>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 		</plugins>
 	</build>
 
+	<profiles>
+		<!-- Deployment profile (required so these plugins are only used when deploying) -->
+		<profile>
+			<id>deploy</id>
+			<build>
+				<plugins>
+					<!-- GPG plugin -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+								<configuration>
+									<!-- Prevent `gpg` from using pinentry programs -->
+									<gpgArguments>
+										<arg>--pinentry-mode</arg>
+										<arg>loopback</arg>
+									</gpgArguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
+	<distributionManagement>
+		<!-- Central Repository -->
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+
 	<scm>
-		<developerConnection>scm:git:https://${env.GIT_USERNAME}:${env.GIT_PASSWORD}@github.com/bonitasoft/bonita-connector-salesforce.git</developerConnection>
-		<connection>scm:git:https://${env.GIT_USERNAME}:${env.GIT_PASSWORD}@github.com/bonitasoft/bonita-connector-salesforce.git</connection>
+		<developerConnection>scm:git:git@github.com:bonitasoft/bonita-connector-salesforce.git</developerConnection>
+		<connection>scm:git:git@github.com:bonitasoft/bonita-connector-salesforce.git</connection>
 		<url>https://github.com/bonitasoft/bonita-connector-salesforce</url>
 		<tag>HEAD</tag>
 	</scm>
